Implement dimensional time slice crawler Signed-off-by: Alekhya Parisha <aparisha@amazon.com>